# tsmm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  pprof.sh  prof.out  run.sh  tsmm.cpp
.cache/clangd/index/: bench.cpp.055C9BD52516E87F.idx  bench.cpp.E17036B6F0D6A070.idx  block_pack.h.97ADFE8D0EFD333D.idx  final.h.1641D0EF3ACBDDBE.idx  final.h.809070CF3C0ABEDF.idx  kernel.h.5B9D6066359572A0.idx  kernel.h.D11CE39C56E11F5A.idx  micro_kernel24x8.h.58DA6902E62835E3.idx  micro_kernel24x8.h.746C9E8DBFDACA59.idx  prefetch.cpp.978D8253A876D176.idx  prefetch.h.443762176C256256.idx  tensor.h.17A5E38D9B24C4BB.idx  tensor.h.6FDC4E1789969D29.idx  timer.h.29572EEA54D3EDAA.idx  timer.h.E8DC59796769B650.idx  tsmm.cpp.05BC59E9D8C84D48.idx  tsmm.cpp.27F00FE801F53457.idx  tsmm_opt.cpp.34D9BC5804499B99.idx  tsmm_opt.cpp.3F3CE768C7396043.idx  tsmmsimd.h.796DABE188E6F69F.idx  tsmmsimd.h.C78669C5CAAB5C0C.idx
docs/: deepseek.md  intel.md  intrinsic.md  openblas.md  procedure.md
include/: block.h  block_pack.h  final.h  kernel.h  micro_kernel24x8.h  out_product.h  prefetch.h  tensor.h  timer.h  tsmm_cache.h  tsmmsimd.h  utils.h
src/: bench.cpp  prefetch.cpp  tsmm.cpp  tsmm_opt.cpp
